# PC_Builder

./: .gitignore  db.sqlite3  procfile  readme.txt  requirements.txt
.github/workflows/: deploy.yml
builder/: admin.py  models.py  urls.py  views.py
builder/migrations/: 0001_initial.py  0002_remove_component_description_component_power_and_more.py  0003_build.py  0004_order.py  0005_order_profit.py  0006_profile.py  0007_component_image_profile_otp_profile_verified.py  0008_remove_profile_otp_remove_profile_verified.py  0009_order_address_order_city_order_name_and_more.py  0010_order_status.py  0011_order_estimated_delivery.py  0012_build_sector.py
builder/static/css/: home.css  style.css
builder/static/js/: home.js
builder/templates/: admin_dashboard.html  base.html  builder.html  checkout.html  home.html  my_builds.html  my_orders.html
builder/templates/registration/: login.html  signup.html
pcbuilder/: asgi.py  settings.py  urls.py  wsgi.py
pcbuilderlib/: compatibility.py
pcbuilderlib-package/: README.md  pyproject.toml
pcbuilderlib-package/pcbuilderlib/: LICENSE  __init__.py  performance.py  power.py  pricing.py
staticfiles/js/: builder.js
